<resources>
    <string name="app_name">SmartLab</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="skip">Пропустить</string>
    <string name="Analyzes">Анализы</string>
    <string name="on_boarding_info_one">Экспресс сбор и получение проб</string>
    <string name="welcome">Добро пожаловать!</string>
    <string name="join_to">Войдите, чтобы пользоваться функциями приложения</string>
    <string name="join_on_e_mail">Вход по E-mail</string>
    <string name="example_mail_ru">example@mail.ru</string>
    <string name="next">Далее</string>
    <string name="join_with">Или войдите с помощью</string>
    <string name="join_with_yandex">Войти с Яндекс</string>
    <string name="code_e_mail">Введите код из E-mail</string>
    <string name="create_password">Создайте пароль</string>
    <string name="to_protect_your_personal_data">Для защиты ваших персональных данных</string>
    <string name="create_card_of_patience">Создание карты пациента</string>
    <string name="without_card_you">Без карты пациента вы не сможете заказать анализы</string>
    <string name="the_patient_records_will_store">В картах пациентов будут храниться результаты анализов вас и ваших близких</string>
    <string name="date_of_birth">Дата рождения</string>
    <string name="patronymic">Отчество</string>
    <string name="surname">Фамилия</string>
    <string name="name">Имя</string>
    <string name="gender">Пол</string>
    <string name="create">Создать</string>
    <string name="catalog_of_analyses">Каталог анализов</string>
    <string name="analyses">Анализы</string>
    <string name="results">Результаты</string>
    <string name="support">Поддержка</string>
    <string name="profile">Профиль</string>
    <string name="add">Добавить</string>
    <string name="ruble">\u20BD</string>
    <string name="promotions_and_news">Акции и новости</string>
    <string name="description">Описание</string>
    <string name="preparation">Подготовка</string>
    <string name="results_after">Результаты через:</string>
    <string name="biomaterial">Биоматериал:</string>
    <string name="add_for">Добавить за</string>
    <string name="shopping_cart">Корзина</string>
    <string name="go_to_checkout">Перейти к оформлению заказа</string>
    <string name="summa">Сумма</string>
    <string name="to_shop_cart">В корзину</string>
    <string name="cancel">Отменить</string>
    <string name="one_patient">1 пациент</string>
    <string name="card_of_patient">Карта пациента</string>
    <string name="making_an_order">Оформление заказа</string>
    <string name="address_not_necessary">Адрес *</string>
    <string name="address">Введите ваш адрес</string>
    <string name="data_time">Дата и время</string>
    <string name="choose_data_and_time">Выберите дату и время</string>
    <string name="who_will_take_the_text">Кто будет сдавать анализы*</string>
    <string name="add_more_patient">Добавить еще пациента</string>
    <string name="phone">Телефон*</string>
    <string name="enter_the_phone_number">Введите ваш номер телефона</string>
    <string name="comment">Комментарий</string>
    <string name="can_leave_our_wishes">Можете оставить свои пожелания</string>
    <string name="pay_with_apple_pay">Оплата Apple Pay</string>
    <string name="promo_code">Промокод</string>
    <string name="order">Заказать</string>
    <string name="address_of_delivery_of_tests">Адрес сдачи анализов</string>
    <string name="your_address">Ваш адрес</string>
    <string name="longitude">Долгота</string>
    <string name="width">Широта</string>
    <string name="height">Высота</string>
    <string name="flat">Квартира</string>
    <string name="doorway">Подъезд</string>
    <string name="floor">Этаж</string>
    <string name="intercom">Домофон</string>
    <string name="save_this_address">Сохранить этот адрес</string>
    <string name="example_name_of_address">Название: например дом, работа</string>
    <string name="submit">Подтвердить</string>
    <string name="choose_data">Выберите дату</string>
    <string name="choose_time">Выберите время</string>
    <string name="_10_00">10:00</string>
    <string name="_13_00">13:00</string>
    <string name="_14_00">14:00</string>
    <string name="_15_00">15:00</string>
    <string name="_16_00">16:00</string>
    <string name="_18_00">18:00</string>
    <string name="_19_00">19:00</string>
    <string name="choose_patient">Выбор пациента</string>
    <string name="add_patient">Добавить пациента</string>
    <string name="save">Сохранить</string>
    <string name="payment">Оплата</string>
    <string name="contacting_the_bank">Связываемся с банком…</string>
    <string name="make_the_payment">Производим оплату</string>
    <string name="your_order_has_been_successfully_paid">Ваш заказ успешно оплачен</string>
    <string name="you_just_have_to_wait">Вам осталось дождаться приезда медсестры и сдать анализы. До скорой встречи!</string>
    <string name="rulesForPreparing">Не забудьте ознакомиться с правилами подготовки к сдаче анализов</string>
    <string name="to_main">На главную</string>
    <string name="purchase_receipt">Чек покупки</string>
    <string-array name="genders">
        <item>Мужской</item>
        <item>Женский</item>
    </string-array>
</resources>