<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.profile.ProfileCardFragment">

    <TextView
        android:id="@+id/textSkip"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/skip"
        android:textColor="@color/active_blue"
        android:textSize="20sp"
        android:layout_marginTop="56dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="16dp"
        android:text="@string/create_card_of_patience"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintEnd_toStartOf="@+id/textSkip"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="16dp"
        android:text="@string/without_card_you"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/the_patient_records_will_store"
        app:layout_constraintEnd_toEndOf="@+id/textView2"
        app:layout_constraintStart_toStartOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/nameInput"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginHorizontal="20dp"
        app:hintEnabled="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/nameEdit"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/border"
            android:hint="@string/name"
            android:inputType="textEmailAddress" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/surnameInput"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="0dp"
        android:layout_marginTop="24dp"
        android:layout_height="wrap_content"
        app:hintEnabled="false"
        app:layout_constraintEnd_toEndOf="@+id/nameInput"
        app:layout_constraintStart_toStartOf="@+id/nameInput"
        app:layout_constraintTop_toBottomOf="@+id/nameInput">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/surnameEdit"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/border"
            android:hint="@string/surname"
            android:inputType="textEmailAddress" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/patronymicInput"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        app:hintEnabled="false"
        app:layout_constraintEnd_toEndOf="@+id/surnameInput"
        app:layout_constraintStart_toStartOf="@+id/surnameInput"
        app:layout_constraintTop_toBottomOf="@+id/surnameInput">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/patronymicEdit"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/border"
            android:hint="@string/patronymic"
            android:inputType="textEmailAddress" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/dateOfBirthInput"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        app:hintEnabled="false"
        app:layout_constraintEnd_toEndOf="@+id/patronymicInput"
        app:layout_constraintStart_toStartOf="@+id/patronymicInput"
        app:layout_constraintTop_toBottomOf="@+id/patronymicInput">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/dateOfBirthEdit"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/border"
            android:hint="@string/date_of_birth"
            android:inputType="textEmailAddress" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu"
        android:id="@+id/textAutoCompleteInput"
        android:layout_marginTop="24dp"
        android:layout_width="0dp"
        app:hintEnabled="false"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="@+id/dateOfBirthInput"
        app:layout_constraintStart_toStartOf="@+id/dateOfBirthInput"
        app:layout_constraintTop_toBottomOf="@+id/dateOfBirthInput">

        <AutoCompleteTextView
            android:id="@+id/textAutoComplete"
            android:inputType="none"
            android:background="@drawable/border"
            android:hint="@string/gender"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/createButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@drawable/button_background"
        android:enabled="false"
        android:paddingVertical="16dp"
        android:text="@string/create"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="17sp"
        app:cornerRadius="10dp"
        android:layout_marginTop="48dp"
        app:layout_constraintEnd_toEndOf="@+id/textAutoCompleteInput"
        app:layout_constraintStart_toStartOf="@+id/textAutoCompleteInput"
        app:layout_constraintTop_toBottomOf="@+id/textAutoCompleteInput" />

</androidx.constraintlayout.widget.ConstraintLayout>