<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.payment.PaymentFragment">

    <TextView
        android:id="@+id/paymentText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="34dp"
        android:text="@string/payment"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="226dp"
        android:indeterminateDrawable="@drawable/gradient"
        app:layout_constraintEnd_toEndOf="@+id/paymentText"
        app:layout_constraintStart_toStartOf="@+id/paymentText"
        app:layout_constraintTop_toBottomOf="@+id/paymentText" />

    <TextView
        android:id="@+id/textLoad"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/spacing_20dp"
        android:layout_marginTop="26dp"
        android:gravity="center"
        android:text="@string/contacting_the_bank"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/progressBar" />

    <ImageView
        android:id="@+id/image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="82dp"
        android:src="@drawable/illustration1"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="@+id/paymentText"
        app:layout_constraintStart_toStartOf="@+id/paymentText"
        app:layout_constraintTop_toBottomOf="@+id/paymentText" />

    <TextView
        android:id="@+id/orderSuccussfullyPaid"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="52dp"
        android:layout_marginTop="31dp"
        android:gravity="center"
        android:text="@string/your_order_has_been_successfully_paid"
        android:textColor="@color/green"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/image" />

    <TextView
        android:id="@+id/infoAboutDelivery"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="42dp"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="@string/you_just_have_to_wait"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/orderSuccussfullyPaid" />

    <TextView
        android:id="@+id/rulesForPreparing"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="36dp"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:text="@string/rulesForPreparing"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/infoAboutDelivery" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonPurchaseReceipt"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:backgroundTint="@color/white"
        android:paddingVertical="16dp"
        android:text="@string/purchase_receipt"
        android:textAllCaps="false"
        android:textColor="@color/active_blue"
        android:textSize="17sp"
        android:visibility="gone"
        app:cornerRadius="10dp"
        app:layout_constraintBottom_toTopOf="@+id/buttonToMain"
        app:layout_constraintEnd_toEndOf="@+id/buttonToMain"
        app:layout_constraintStart_toStartOf="@+id/buttonToMain"
        app:strokeColor="@color/active_blue"
        app:strokeWidth="1dp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonToMain"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="21dp"
        android:layout_marginBottom="32dp"
        android:paddingVertical="@dimen/spacing_16dp"
        android:text="@string/to_main"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="17sp"
        android:visibility="gone"
        app:cornerRadius="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>