<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/circle_card">

    <TextView
        android:id="@+id/choosePatient"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/choose_patient"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/close"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/circle_button"
        android:scaleType="center"
        android:src="@drawable/ic_baseline_close_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:orientation="vertical"
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/choosePatient" >
    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/addPatient"
        android:layout_width="0dp"
        android:layout_marginTop="24dp"
        app:strokeWidth="1dp"
        app:strokeColor="@color/active_blue"
        android:backgroundTint="@color/white"
        android:textColor="@color/active_blue"
        android:textSize="15sp"
        app:cornerRadius="10dp"
        android:text="@string/add_patient"
        android:paddingVertical="15dp"
        android:textAllCaps="false"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="@+id/linearLayout"
        app:layout_constraintStart_toStartOf="@+id/linearLayout"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonSubmit"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/spacing_20dp"
        android:layout_marginTop="48dp"
        android:layout_marginBottom="@dimen/spacing_20dp"
        android:backgroundTint="@drawable/button_background"
        android:enabled="false"
        android:paddingVertical="@dimen/spacing_16dp"
        android:text="@string/submit"
        android:textColor="@color/white"
        app:cornerRadius="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addPatient" />
</androidx.constraintlayout.widget.ConstraintLayout>